// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-rem > should not run htmlPlugin with enableRuntime is false 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
    ],
  },
  "plugins": [
    RemoveCssSourcemapPlugin {
      "name": "RemoveCssSourcemapPlugin",
    },
  ],
}
`;

exports[`plugin-rem > should order plugins and run rem plugin with default config 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
      },
    ],
  },
  "plugins": [
    RemoveCssSourcemapPlugin {
      "name": "RemoveCssSourcemapPlugin",
    },
    AutoSetRootFontSizePlugin {
      "HtmlPlugin": [Function],
      "distDir": "static/js",
      "name": "AutoSetRootFontSizePlugin",
      "options": {
        "enableRuntime": true,
        "excludeEntries": [],
        "inlineRuntime": true,
        "maxRootFontSize": 64,
        "rootFontSize": 50,
        "rootFontSizeVariableName": "ROOT_FONT_SIZE",
        "screenWidth": 375,
        "supportLandscape": false,
        "useRootFontSizeBeyondMax": false,
        "widthQueryKey": "",
      },
      "scriptPath": "",
      "webpackEntries": [],
    },
  ],
}
`;

exports[`plugin-rem > should run rem plugin with custom config 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
    ],
  },
  "plugins": [
    RemoveCssSourcemapPlugin {
      "name": "RemoveCssSourcemapPlugin",
    },
    AutoSetRootFontSizePlugin {
      "HtmlPlugin": [Function],
      "distDir": "static/js",
      "name": "AutoSetRootFontSizePlugin",
      "options": {
        "enableRuntime": true,
        "excludeEntries": [],
        "inlineRuntime": true,
        "maxRootFontSize": 64,
        "pxtorem": {
          "propList": [
            "font-size",
          ],
        },
        "rootFontSize": 30,
        "rootFontSizeVariableName": "ROOT_FONT_SIZE",
        "screenWidth": 375,
        "supportLandscape": false,
        "useRootFontSizeBeyondMax": false,
        "widthQueryKey": "",
      },
      "scriptPath": "",
      "webpackEntries": [],
    },
  ],
}
`;

exports[`plugin-rem > should run rem plugin with default config 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "config": false,
                    "plugins": [
                      {
                        "Once": [Function],
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                      {
                        "AtRule": [Function],
                        "Declaration": [Function],
                        "Once": [Function],
                        "postcssPlugin": "postcss-pxtorem",
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(\\?:a\\|c\\)ss\\$/,
      },
    ],
  },
  "plugins": [
    RemoveCssSourcemapPlugin {
      "name": "RemoveCssSourcemapPlugin",
    },
    AutoSetRootFontSizePlugin {
      "HtmlPlugin": [Function],
      "distDir": "static/js",
      "name": "AutoSetRootFontSizePlugin",
      "options": {
        "enableRuntime": true,
        "excludeEntries": [],
        "inlineRuntime": true,
        "maxRootFontSize": 64,
        "rootFontSize": 50,
        "rootFontSizeVariableName": "ROOT_FONT_SIZE",
        "screenWidth": 375,
        "supportLandscape": false,
        "useRootFontSizeBeyondMax": false,
        "widthQueryKey": "",
      },
      "scriptPath": "",
      "webpackEntries": [],
    },
  ],
}
`;
